# studyAICompilerFromScratch

./: README.md
study_LLVM/: 从 TensorFlow 神经网络 到 MLIR、LLVM IR 再到 GPU 执行的全流程.md
study_compiler/: command.txt
study_compiler/study_llvm/MyPass/OpcodeCounter/: CMakeLists.txt
study_compiler/study_llvm/MyPass/OpcodeCounter/test/: input_for_cc.ll
study_compiler/study_llvm/MyPass/helloworld/: CMakeLists.txt
study_compiler/study_llvm/MyPass/helloworld/test/: test.c  test.ll
study_compiler/study_llvm/说明汇总/: PASS教程.md  optimization methods.md  从 TensorFlow 神经网络 到 MLIR、LLVM IR 再到 GPU 执行的全流程.md  安装 LLVM 19.md  📌 Affine 和 Memory Reference（MemRef）优化解析.md
study_compiler/study_mlir/MyPass/mlir_toy/: CMakeLists.txt
